# docs/swagger.json
@@ -19,10 +19,7 @@
     "paths": {
         "/": {
             "get": {
-                "description": "Root endpoint to verify the API is running",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Root endpoint to verify the API is running.",
                 "produces": [
                     "application/json"
                 ],
@@ -34,8 +31,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/internal_server.WelcomeResponse"
                         }
                     }
                 }
@@ -61,7 +57,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.LoginRequest"
+                            "$ref": "#/definitions/gotickets_internal_domain_user_dto.LoginRequest"
                         }
                     }
                 ],
@@ -75,7 +71,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -119,7 +115,7 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -150,8 +146,8 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/gotickets_internal_domain_user_dto.Response"
                         }
@@ -159,7 +155,7 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -204,31 +200,31 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "409": {
                         "description": "Conflict",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -262,13 +258,13 @@
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -297,7 +293,7 @@
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -335,13 +331,13 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -376,19 +372,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -419,7 +415,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.UpdateRequest"
+                            "$ref": "#/definitions/gotickets_internal_domain_event_dto.UpdateRequest"
                         }
                     }
                 ],
@@ -433,19 +429,19 @@
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "404": {
                         "description": "Not Found",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -473,13 +469,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/auth.JwtCustomClaims"
+                            "$ref": "#/definitions/gotickets_internal_auth.JwtCustomClaims"
                         }
                     },
                     "401": {
                         "description": "Unauthorized",
                         "schema": {
-                            "$ref": "#/definitions/httpresponse.Error"
+                            "$ref": "#/definitions/gotickets_internal_httpresponse.Error"
                         }
                     }
                 }
@@ -487,10 +483,7 @@
         },
         "/health": {
             "get": {
-                "description": "Check the health status of the API and Database",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Check the health status of the API and the database connection.",
                 "produces": [
                     "application/json"
                 ],
@@ -502,8 +495,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/internal_server.HealthResponse"
                         }
                     }
                 }
@@ -511,7 +503,7 @@
         }
     },
     "definitions": {
-        "auth.JwtCustomClaims": {
+        "gotickets_internal_auth.JwtCustomClaims": {
             "type": "object",
             "properties": {
                 "aud": {
@@ -565,46 +557,6 @@
                 },
                 "user_id": {
                     "type": "integer"
-                }
-            }
-        },
-        "dto.LoginRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "password"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "password": {
-                    "type": "string",
-                    "minLength": 6
-                }
-            }
-        },
-        "dto.UpdateRequest": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string",
-                    "maxLength": 1000
-                },
-                "location": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "integer",
-                    "minimum": 0
-                },
-                "starts_at": {
-                    "type": "string"
-                },
-                "title": {
-                    "type": "string",
-                    "maxLength": 150,
-                    "minLength": 2
                 }
             }
         },
@@ -717,6 +669,30 @@
                 }
             }
         },
+        "gotickets_internal_domain_event_dto.UpdateRequest": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "maxLength": 1000
+                },
+                "location": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "integer",
+                    "minimum": 0
+                },
+                "starts_at": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string",
+                    "maxLength": 150,
+                    "minLength": 2
+                }
+            }
+        },
         "gotickets_internal_domain_user_dto.CreateRequest": {
             "type": "object",
             "required": [
@@ -729,6 +705,22 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string",
+                    "minLength": 6
+                }
+            }
+        },
+        "gotickets_internal_domain_user_dto.LoginRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "password"
+            ],
+            "properties": {
+                "email": {
                     "type": "string"
                 },
                 "password": {
@@ -760,7 +752,7 @@
                 }
             }
         },
-        "httpresponse.Error": {
+        "gotickets_internal_httpresponse.Error": {
             "type": "object",
             "properties": {
                 "code": {
@@ -770,6 +762,37 @@
                     "type": "string"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_server.HealthResponse": {
+            "type": "object",
+            "properties": {
+                "database": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
+                }
+            }
+        },
+        "internal_server.WelcomeResponse": {
+            "type": "object",
+            "properties": {
+                "environment": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "version": {
                     "type": "string"
                 }
             }
